# cookiecutter-python-package

./: .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: branch.yml
hooks/: post_gen_project.py
src/template_python_package/: __init__.py  __main__.py  logging.py
tests/: conftest.py
tests/template_python_package/: test_package.py
{{cookiecutter.package_name}}/: .flake8  CODEOWNERS  Makefile  README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: tests.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.package_name}}/tests/{{cookiecutter.package_name}}/: test_package.py
{{cookiecutter.project_name}}/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup_git_repo.sh
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  logging.py
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.package_name}}/: test_package.py
{{cookiecutter.project_slug}}/src/template_python_package/: __main__.py
{{cookiecutter.project_slug}}/tests/template_python_package/: test_package.py
