[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
packages = [
    {include = "{{cookiecutter.package_name}}", from = "src"},
]

[tool.poetry.urls]
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/RELEASES.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
docformatter = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pytest = "*"
pytest-cov = "*"
reorder-python-imports = "*"
safety = "*"
types-pkg-resources = "*"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.__main__:main"

[tool.black]
line-length = 90
target-version = ['py39']
include = '\.pyi?$'
profile = "black"

[tool.mypy]
namespace_packages = true
ignore_missing_imports = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "setuptools"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov {{cookiecutter.package_name}} --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
